--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<td>5.69 X 10<sup>26</sup></td>
 				</tr>
 				
-				<tr id="Diameter">
+				<tr> <tr id="Diameter">
 					<th> Diameter (km) </th>
 					<td>12756</td>
 					<td>142800</td>
